--- a/views/pagar/pagar_parcelas.html
+++ b/views/pagar/pagar_parcelas.html
@@ -1,32 +1,16 @@
 {{if formParcelas.create_form or formParcelas.update_form:}}
-    {{=formParcelas[1].custom.begin}}
-    <div class="well">
-        <div class="row">
-            <div class="col-md-2">
-                {{=formParcelas[1].custom.label.parcela}}
-                {{=formParcelas[1].custom.widget.parcela}}
-            </div>
-            <div class="col-md-3">
-                {{=formParcelas[1].custom.label.vencimento}}
-                {{=formParcelas[1].custom.widget.vencimento}}
-            </div>
-            <div class="col-md-3">
-                {{=formParcelas[1].custom.label.valor}}
-                {{=formParcelas[1].custom.widget.valor}}
-            </div>
-        </div>
+    {{=formParcelas[1].custom.begin}} 
+    <div class="row">
+        {{=campo(2,formParcelas[1].custom.label.parcela,formParcelas[1].custom.widget.parcela)}} 
+        {{=campo(3,formParcelas[1].custom.label.vencimento,formParcelas[1].custom.widget.vencimento)}} 
+        {{=campo(3,formParcelas[1].custom.label.valor,formParcelas[1].custom.widget.valor)}} 
     </div>
-    <div class="left" style="margin-top: 20px;margin-left: 15px">
-        {{=formParcelas[1].custom.submit}}
-        {{=btnVoltar}}
-        {{=btnExcluir}}
-    </div>
-    {{=formParcelas[1].custom.end}}
+   <hr>
+   {{=btnRodape(formParcelas[1].custom.submit,btnVoltar,btnExcluir)}}
+   {{=formParcelas[1].custom.end}}
 {{else:}}
-    <div class="well">
-        {{=formParcelas}}
-    </div>
-    <div class="left" style="margin-top: 20px;margin-left: 15px">
+   {{=formParcelas}}
+   <div class="left" style="margin-top: 30px;margin-left: 10px; font-size: 16px">
         <b> Total Parcelas: {{=total_parcela}}</b>
     </div>
 {{pass}}
