--- a/views/relatorios/gerar_historico_insumo.html
+++ b/views/relatorios/gerar_historico_insumo.html
@@ -30,7 +30,7 @@ $(document).ready(function(){
         paging: false,
         scrollY: 300,
         scrollCollapse: true,
-        searching: false,
+        searching: true,
         ordering:  true,
         language: {"url": "//cdn.datatables.net/plug-ins/1.10.13/i18n/Portuguese-Brasil.json"},
     });
