--- a/views/pagar/gerar_pagar.html
+++ b/views/pagar/gerar_pagar.html
@@ -11,42 +11,48 @@
             <th>Pagamento</th>
             <th class="text-right">Valor</th>
             <th class="text-right">Pendente</th>
-            
+            <th>Status</th>            
         </tr>
     </thead>
     <tbody>
         {{for r in duplicatas:}}
-        {{print r}}
         <tr id='{{=r.rowId}}'>
 
             <td>{{=r.fornecedor}}</td>
             <td>{{=r.documento}}</td>
             <td>{{=r.parcela}}</td>
-            <td>{{=r.emissao}}</td>
-            <td>{{=r.vencimento}}</td>
-            <td>{{=r.pagamento}}</td>
+            <td>{{=make_data(r.emissao)}}</td>
+            <td>{{=make_data(r.vencimento)}}</td>
+            <td>{{=make_data(r.pagamento)}}</td>
             <td class="text-right">{{=r.valor}}</td>
             <td class="text-right">{{=r.pendente}}</td>
+            <td class="{{='text-danger' if r.pagamento == None else 'text-success'}}">{{= "Pendente" if r.pagamento == None else "Pago"}}</td>
         </tr>
         {{pass}}
     </tbody>
 </table>
     <div class="row" style="margin-right: 16px">
-        <div class="col col-md-4">
+        <div class="col col-md-3">
             <div class="center" style="font-size: 16px">
             <div class="alert alert-info"> Total Títulos: {{=total}}</div>
         </div>
     </div>
     <div class="row">
-        <div class="col col-md-4">
+        <div class="col col-md-3">
             <div class="center" style="font-size: 16px">
             <div class="alert alert-success"> Total Pago: {{=total_pago}}</div>
         </div>
     </div>
     <div class="row">
-        <div class="col col-md-4">
+        <div class="col col-md-3">
             <div class="center" style="font-size: 16px">
             <div class="alert alert-danger"> Total Pendente: {{=total_pendente}}</div>
+        </div>
+    </div>
+        <div class="row">
+        <div class="col col-md-3">
+            <div class="center" style="font-size: 16px">
+            <div class="alert alert-warning"> Total Selecionado: 0,00</div>
         </div>
     </div>
 
@@ -62,6 +68,7 @@ $(document).ready(function(){
         DT_RowId: 'r.rowId',
         language: {"url": "//cdn.datatables.net/plug-ins/1.10.13/i18n/Portuguese-Brasil.json"},
     });
+
     var table = $('#duplicatas').DataTable();
  
     $('#duplicatas tbody').on( 'click', 'tr', function () {
@@ -79,3 +86,5 @@ $(document).ready(function(){
     });
 });
 </script>
+
+
