--- a/views/pagar/pagarInsumos.html
+++ b/views/pagar/pagarInsumos.html
@@ -24,7 +24,7 @@
     {{=formInsumos[1].custom.end}}
 {{else:}}
     {{=formInsumos}}
-    <div class="left" style="margin-top: 30px;margin-left: 10px; font-size: 16px">
+    <div class="left" style="margin-top: 15px; font-size: 16px;">
         <b> Total Insumos: {{=total_insumos}}</b>
     </div>
 {{pass}}
