--- a/views/pagar/pagar_despesas.html
+++ b/views/pagar/pagar_despesas.html
@@ -10,8 +10,8 @@
     {{=formDespesas[1].custom.end}}
 {{else:}}
     {{=formDespesas}}
-    <div class="right" style="margin-top: 30px;margin-left: 10px; font-size: 16px">
-        <div class="alert alert-success"> Total Despesas: {{=total_despesas}}</div>
+    <div class="left" style="margin-top: 15px; font-size: 16px;">
+        <b> Total Despesas: {{=total_despesas}}</b>
     </div>
 {{pass}}
 
