--- a/views/pagar/pagar_parcelas.html
+++ b/views/pagar/pagar_parcelas.html
@@ -10,7 +10,7 @@
    {{=formParcelas[1].custom.end}}
 {{else:}}
    {{=formParcelas}}
-   <div class="left" style="margin-top: 30px;margin-left: 10px; font-size: 16px">
+  <div class="left" style="margin-top: 15px; font-size: 16px;">
         <b> Total Parcelas: {{=total_parcela}}</b>
     </div>
 {{pass}}
