--- a/views/pagar/pagarInsumos.html
+++ b/views/pagar/pagarInsumos.html
@@ -17,6 +17,7 @@
         {{=campo(2,formInsumos[1].custom.label.desconto,formInsumos[1].custom.widget.desconto)}} 
     </div>
     <div class="row">
+        {{=campo(3,formInsumos[1].custom.label.demanda,formInsumos[1].custom.widget.demanda)}} 
         {{=campo(3,formInsumos[1].custom.label.etapa,formInsumos[1].custom.widget.etapa)}} 
     </div>
     <hr>
