--- a/views/pagar/pagar_despesas.html
+++ b/views/pagar/pagar_despesas.html
@@ -1,9 +1,10 @@
 {{if formDespesas.create_form or formDespesas.update_form:}}
     {{=formDespesas[1].custom.begin}}
     <div class="row">
-        {{=campo(6,formDespesas[1].custom.label.despesa,formDespesas[1].custom.widget.despesa)}} 
-        {{=campo(3,formDespesas[1].custom.label.dtdespesa,formDespesas[1].custom.widget.dtdespesa)}} 
-        {{=campo(3,formDespesas[1].custom.label.valor,formDespesas[1].custom.widget.valor)}} 
+        {{=campo(2,formDespesas[1].custom.label.dtdespesa,formDespesas[1].custom.widget.dtdespesa)}} 
+        {{=campo(5,formDespesas[1].custom.label.despesa,formDespesas[1].custom.widget.despesa)}} 
+        {{=campo(3,formDespesas[1].custom.label.demanda,formDespesas[1].custom.widget.demanda)}}
+        {{=campo(2,formDespesas[1].custom.label.valor,formDespesas[1].custom.widget.valor)}} 
     </div>
     <hr>
     {{=btnRodape(formDespesas[1].custom.submit,btnVoltar,btnExcluir)}}
