--- a/views/pagar/lotes.html
+++ b/views/pagar/lotes.html
@@ -1,4 +1,8 @@
-{{=form}}
+{{extend 'layout.html'}}
+<div class="container">
+    {{=titulo("PAGAMENTOS ","Relatório de Pagamentos")}}
+	{{=form}}
+</div>
 <script>
   $(document).ready(function(){
     $('#lote_delete').click(
