--- a/views/web2py_ajax.html
+++ b/views/web2py_ajax.html
@@ -26,6 +26,7 @@ response.files.append(URL('static','treegrid/js/jquery.treegrid.bootstrap3.js'))
 response.files.append(URL('static','css/sidebar_menu.css'))
 response.files.append(URL('static','css/erpmf.css'))
 response.files.append(URL('static','js/jquery.redirect.js'))
+response.files.append('//cdn.datatables.net/plug-ins/1.10.19/sorting/date-dd-MMM-yyyy.js')
 
 response.include_meta()
 response.include_files()
