--- a/views/pagar/pagar_lista.html
+++ b/views/pagar/pagar_lista.html
@@ -11,15 +11,14 @@
             {{=form_pesq.custom.begin}}
             <div class="row">
                 {{=campo(4,form_pesq.custom.label.fornecedor,form_pesq.custom.widget.fornecedor)}}
-                {{=campo(4,form_pesq.custom.label.demanda,form_pesq.custom.widget.demanda)}}
+                {{=campo(4,form_pesq.custom.label.status,form_pesq.custom.widget.status)}}
             </div>
             <div class="row">
                 {{=campo(4,form_pesq.custom.label.dtinicial,form_pesq.custom.widget.dtinicial)}}
                 {{=campo(4,form_pesq.custom.label.dtfinal,form_pesq.custom.widget.dtfinal)}}
             </div>
             <div class="row">
-                {{=campo(4,form_pesq.custom.label.documento,form_pesq.custom.widget.documento)}}
-                {{=campo(4,form_pesq.custom.label.status,form_pesq.custom.widget.status)}}
+                {{=campo(8,form_pesq.custom.label.documento,form_pesq.custom.widget.documento)}}
             </div>
             <hr>
             {{=btnRodape(form_pesq.custom.submit)}}
@@ -36,7 +35,7 @@ $(document).ready(function(){
     jQuery('form').submit(function() {
         $('.nav li.active').next('li').removeClass('disabled');
         $('.nav li.active').next('li').find('a').attr("data-toggle","tab").trigger("click");
-        ajax('{{=URL('gerar_pagar')}}',['fornecedor','demanda','dtinicial', 'dtfinal','documento','status'],'menu1');
+        ajax('{{=URL('gerar_pagar')}}',['fornecedor','dtinicial', 'dtfinal','documento','status'],'menu1');
         return false;
     }); 
 });
