--- a/views/receber/recebimentos.html
+++ b/views/receber/recebimentos.html
@@ -2,9 +2,11 @@
 
 <script type="text/javascript">
 jQuery(function($){
-   $("#recebimentos_dtpagamento").css('width', '150px').mask('99/99/9999'); 
-   $("#recebimentos_conta").css('width', '150px'); 
-   $("#recebimentos_vlrecebimento").css('width', '150px');
+   $("#conta_corrente_dtpagamento").css('width', '150px').mask('99/99/9999'); 
+   $("#conta_corrente_conta").css('width', '150px'); 
+   $("#conta_corrente_vlrecebimento").css('width', '150px');
+   $("#conta_corrente_juros").css('width', '150px');
+   $("#conta_corrente_desconto").css('width', '150px');
 });  
 </script>
 
