--- a/views/receber/recebimentos_cheques.html
+++ b/views/receber/recebimentos_cheques.html
@@ -1,53 +1,49 @@
 {{if gridCheques.create_form or gridCheques.update_form:}}
     {{=gridCheques[1].custom.begin}}
-    <div class="well">
-        <div class="row">
-            <div class="col-md-2">
-                {{=gridCheques[1].custom.label.banco}}
-                {{=gridCheques[1].custom.widget.banco}}
-            </div>
-            <div class="col-md-2">
-                {{=gridCheques[1].custom.label.agencia}}
-                {{=gridCheques[1].custom.widget.agencia}}
-            </div>
-            <div class="col-md-2">
-                {{=gridCheques[1].custom.label.conta}}
-                {{=gridCheques[1].custom.widget.conta}}
-            </div>
-            <div class="col-md-2">
-                {{=gridCheques[1].custom.label.cheque}}
-                {{=gridCheques[1].custom.widget.cheque}}
-            </div>
-            <div class="col-md-2">
-                {{=gridCheques[1].custom.label.valor}}
-                {{=gridCheques[1].custom.widget.valor}}
-            </div>
-            <div class="col-md-2">
-                {{=gridCheques[1].custom.label.dtcheque}}
-                {{=gridCheques[1].custom.widget.dtcheque}}
-            </div>
+    <div class="row">
+        <div class="col-md-2">
+            {{=gridCheques[1].custom.label.banco}}
+            {{=gridCheques[1].custom.widget.banco}}
         </div>
-        <div class="row">
-            <p></p>
-            <div class="col-md-6">
-                {{=gridCheques[1].custom.label.nome}}
-                {{=gridCheques[1].custom.widget.nome}}
-            </div>
+        <div class="col-md-2">
+            {{=gridCheques[1].custom.label.agencia}}
+            {{=gridCheques[1].custom.widget.agencia}}
+        </div>
+        <div class="col-md-2">
+            {{=gridCheques[1].custom.label.conta}}
+            {{=gridCheques[1].custom.widget.conta}}
+        </div>
+        <div class="col-md-2">
+            {{=gridCheques[1].custom.label.cheque}}
+            {{=gridCheques[1].custom.widget.cheque}}
+        </div>
+        <div class="col-md-2">
+            {{=gridCheques[1].custom.label.valor}}
+            {{=gridCheques[1].custom.widget.valor}}
+        </div>
+        <div class="col-md-2">
+            {{=gridCheques[1].custom.label.dtcheque}}
+            {{=gridCheques[1].custom.widget.dtcheque}}
         </div>
     </div>
-    <div class="panel panel-info">
-        <div class="panel-body">
-            <div class="right">
-                {{=gridCheques[1].custom.submit}}
-                {{=btnVoltar}}
-                {{=btnExcluir}}
-            </div>
+    <div class="row">
+        <p></p>
+        <div class="col-md-6">
+            {{=gridCheques[1].custom.label.nome}}
+            {{=gridCheques[1].custom.widget.nome}}
         </div>
+    </div>  
+    <hr>
+    <div class="btn-group btn-group-sm" role="group">  
+        {{=gridCheques[1].custom.submit}}
+        {{=btnVoltar}}
+        {{=btnExcluir}}
     </div>
+    <hr>
     {{=gridCheques[1].custom.end}}
 {{else:}}
-    <div class="well">
-        {{=gridCheques}}
-    </div>    
+    
+    {{=gridCheques}}
+    
     <pre>Total de Cheques : <b>{{=total_cheques}}</b>    Total de Recebiemtnos : <b>{{=session.total_recebimentos}}</b></pre>
 {{pass}}
